tests/bad/structs/3.lat
class A {
    int a;
}

int main() {
    A a;
    printInt(a.b);
    return 0;
}